# chip-8-wasm

./: Cargo.toml  chip8.js  index.html
src/: lib.rs
src/structs/: cpu.rs
